unpackaged/main/default/objects/PurchaseOrder__c/PurchaseOrder__c.object-meta.xml
<CustomObject>
    <label>Purchase Order</label>
    <nameField>
        <displayFormat>PO{0000}</displayFormat>
        <label>PO Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>