unpackaged/main/default/objects/PurchaseOrder__c/fields/AcceptedRejectedDate__c.field-meta.xml
<CustomField>
    <fullName>AcceptedRejectedDate__c</fullName>
    <label>Accepted/Rejected Date</label>
    <type>Date</type>
</CustomField>