unpackaged/main/default/objects/PurchaseOrder__c/fields/Datech_Order_Reference__c.field-meta.xml
<CustomField>
    <fullName>Datech_Order_Reference__c</fullName>
    <label>Datech Order Reference</label>
    <length>32</length>
    <type>Text</type>
</CustomField>