unpackaged/main/default/objects/PurchaseOrder__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <formula>TEXT( Opportunity__r.Division__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Division</label>
    <type>Text</type>
</CustomField>