unpackaged/main/default/objects/PurchaseOrder__c/fields/IncludeCustomerOrderNoOnPO__c.field-meta.xml
<CustomField>
    <fullName>IncludeCustomerOrderNoOnPO__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked includes Customer Order Number form Opportunity on Purchase Order Template</description>
    <inlineHelpText>Check if you wish to include the Customer Order Number for Opportunity on the  Purchase Order Template</inlineHelpText>
    <label>Include Customer Order No. PO</label>
    <type>Checkbox</type>
</CustomField>