unpackaged/main/default/objects/PurchaseOrder__c/fields/IsP2O__c.field-meta.xml
<CustomField>
    <fullName>IsP2O__c</fullName>
    <defaultValue>false</defaultValue>
    <label>P2O</label>
    <type>Checkbox</type>
</CustomField>