unpackaged/main/default/objects/PurchaseOrder__c/fields/IsPostedtoSage__c.field-meta.xml
<CustomField>
    <fullName>IsPostedtoSage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Posted to Sage</label>
    <type>Checkbox</type>
</CustomField>