unpackaged/main/default/objects/PurchaseOrder__c/fields/LicenceIssuedDate__c.field-meta.xml
<CustomField>
    <fullName>LicenceIssuedDate__c</fullName>
    <label>Licence Issued Date</label>
    <type>Date</type>
</CustomField>