unpackaged/main/default/objects/PurchaseOrder__c/fields/LicenceIssueTimeDays__c.field-meta.xml
<CustomField>
    <fullName>LicenceIssueTimeDays__c</fullName>
    <formula>LicenceIssuedDate__c - Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Licence Issue Time (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>