unpackaged/main/default/objects/PurchaseOrder__c/fields/NetAmount__c.field-meta.xml
<CustomField>
    <fullName>NetAmount__c</fullName>
    <label>Total Net Amount</label>
    <summarizedField>PurchaseOrderLineItem__c.NetAmount__c</summarizedField>
    <summaryForeignKey>PurchaseOrderLineItem__c.PurchaseOrder__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>