unpackaged/main/default/objects/PurchaseOrder__c/fields/OrderProcessingTimeDays__c.field-meta.xml
<CustomField>
    <fullName>OrderProcessingTimeDays__c</fullName>
    <formula>IF( ISNULL( OrderToSupplierDate__c ),
TODAY() - OrderToSupplierDate__c,
AcceptedRejectedDate__c - OrderToSupplierDate__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Processing Time (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>