unpackaged/main/default/objects/PurchaseOrder__c/fields/OrderToSupplierDate__c.field-meta.xml
<CustomField>
    <fullName>OrderToSupplierDate__c</fullName>
    <label>Order to Supplier Date</label>
    <type>Date</type>
</CustomField>