unpackaged/main/default/objects/PurchaseOrder__c/fields/OtherShippingAddress__c.field-meta.xml
<CustomField>
    <fullName>OtherShippingAddress__c</fullName>
    <label>Other Shipping Address</label>
    <type>TextArea</type>
</CustomField>