unpackaged/main/default/objects/PurchaseOrder__c/fields/Print__c.field-meta.xml
<CustomField>
    <fullName>Print__c</fullName>
    <formula>HYPERLINK( 'javascript:window.open("/apex/PurchaseOrderTemplate?id='+Id+'" ,"_blank","height=600,location=no,resizable=yes,toolbar=no,status=no,menubar=no,scrollbars=1");' , IMAGE("/resource/icon_printer", "Print"))</formula>
    <label>Print</label>
    <type>Text</type>
</CustomField>