unpackaged/main/default/objects/PurchaseOrder__c/fields/Sales_Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>Sales_Invoice_Amount__c</fullName>
    <label>Sales Invoice Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>