unpackaged/main/default/objects/PurchaseOrder__c/fields/Sales_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Sales_Invoice_Date__c</fullName>
    <label>Sales Invoice Date</label>
    <type>Date</type>
</CustomField>