unpackaged/main/default/objects/PurchaseOrder__c/fields/Sales_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Sales_Invoice_Number__c</fullName>
    <label>Sales Invoice Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>