unpackaged/main/default/objects/PurchaseOrder__c/fields/ShippingAddress__c.field-meta.xml
<CustomField>
    <fullName>ShippingAddress__c</fullName>
    <formula>CASE( ShipTo__c ,
"Other",  OtherShippingAddress__c ,
ShipToAccount__r.Name+BR()+ 
ShipToAccount__r.ShippingStreet+BR()+ 
ShipToAccount__r.ShippingCity+BR()+ 
ShipToAccount__r.ShippingState+BR()+ 
ShipToAccount__r.ShippingPostalCode+BR()+ 
ShipToAccount__r.ShippingCountry )</formula>
    <label>Shipping Address</label>
    <type>Text</type>
</CustomField>