unpackaged/main/default/objects/PurchaseOrder__c/fields/ShipTo__c.field-meta.xml
<CustomField>
    <fullName>ShipTo__c</fullName>
    <label>Ship To</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
                <default>true</default>
                <label>Customer</label>
            </value>
            <value>
                <fullName>Majenta</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>