unpackaged/main/default/objects/PurchaseOrder__c/fields/ShipToAccount__c.field-meta.xml
<CustomField>
    <fullName>ShipToAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship To Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.ShipTo__c</field>
            <operation>equals</operation>
            <valueField>Account.Type</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Deliveries</relationshipLabel>
    <relationshipName>PurchaseOrderShippingAccount</relationshipName>
    <type>Lookup</type>
</CustomField>