unpackaged/main/default/objects/PurchaseOrder__c/fields/ShipToContact__c.field-meta.xml
<CustomField>
    <fullName>ShipToContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship To Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.ShipToAccount__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Purchase Orders</relationshipLabel>
    <relationshipName>PurchaseOrderShippingContact</relationshipName>
    <type>Lookup</type>
</CustomField>