unpackaged/main/default/objects/PurchaseOrder__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>Selected Account is not a Supplier.</errorMessage>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Supplier</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Purchase Orders (Supplier)</relationshipLabel>
    <relationshipName>PurchaseOrdersSupplier</relationshipName>
    <type>Lookup</type>
</CustomField>