unpackaged/main/default/objects/PurchaseOrder__c/fields/Supplier_Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Invoice_Amount__c</fullName>
    <label>Supplier Invoice Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>