unpackaged/main/default/objects/PurchaseOrder__c/fields/Supplier_Invoice_to_PO_Variance__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Invoice_to_PO_Variance__c</fullName>
    <formula>NetAmount__c  -  Supplier_Invoice_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier Invoice to PO Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>