unpackaged/main/default/objects/PurchaseOrder__c/fields/SupplierAddress__c.field-meta.xml
<CustomField>
    <fullName>SupplierAddress__c</fullName>
    <formula>Supplier__r.Name+BR()+ 
Supplier__r.ShippingStreet+BR()+ 
Supplier__r.ShippingCity+BR()+ 
Supplier__r.ShippingState+BR()+ 
Supplier__r.ShippingPostalCode+BR()+ 
Supplier__r.ShippingCountry</formula>
    <label>Supplier Address</label>
    <type>Text</type>
</CustomField>