unpackaged/main/default/objects/PurchaseOrder__c/fields/TaxAmount__c.field-meta.xml
<CustomField>
    <fullName>TaxAmount__c</fullName>
    <label>VAT Amount</label>
    <summarizedField>PurchaseOrderLineItem__c.TaxAmount__c</summarizedField>
    <summaryForeignKey>PurchaseOrderLineItem__c.PurchaseOrder__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>