unpackaged/main/default/objects/PurchaseOrder__c/listViews/AllPurchaseOrders.listView-meta.xml
<ListView>
    <fullName>AllPurchaseOrders</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Supplier__c</columns>
    <columns>Date__c</columns>
    <columns>NetAmount__c</columns>
    <columns>TaxAmount__c</columns>
    <columns>TotalAmount__c</columns>
    <columns>Ordered__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date__c</field>
        <operation>lessOrEqual</operation>
    </filters>
    <label>All Purchase Orders KY</label>
</ListView>