unpackaged/main/default/objects/PurchaseOrder__c/listViews/Overhead_Purchase_Orders.listView-meta.xml
<ListView>
    <fullName>Overhead_Purchase_Orders</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Supplier__c</columns>
    <columns>Date__c</columns>
    <columns>NetAmount__c</columns>
    <columns>TaxAmount__c</columns>
    <columns>TotalAmount__c</columns>
    <columns>Ordered__c</columns>
    <columns>Division__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Supplier__c</field>
        <operation>contains</operation>
        <value>K</value>
    </filters>
    <label>Overhead Purchase Orders</label>
</ListView>