unpackaged/main/default/objects/PurchaseOrder__c/listViews/SolidEdgePurchaseOrders.listView-meta.xml
<ListView>
    <fullName>SolidEdgePurchaseOrders</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Supplier__c</columns>
    <columns>Date__c</columns>
    <columns>NetAmount__c</columns>
    <columns>TaxAmount__c</columns>
    <columns>TotalAmount__c</columns>
    <columns>Ordered__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Division__c</field>
        <operation>equals</operation>
        <value>Solid Edge</value>
    </filters>
    <label>Solid Edge Purchase Orders</label>
</ListView>